web-infras/parser/tests/fixtures/babel/es2015/uncategorised/243/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,15)
1|"use strict"; eval => 42
 |             ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,15)
1|"use strict"; eval => 42
 |             ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,15)
1|"use strict"; eval => 42
 |             ^
